# chat-ppt

./: .gitignore  CodeReviewReport.md  README.md  pyproject.toml
api/: .gitignore  alembic.ini  docker-compose.nginx.yml  pyproject.toml  ruff.toml  run.dev.sh
api/app/: config.py  main.py
api/app/auth/application/usecase/: PatchPasswordUseCase.py  RefreshCredentialsUseCase.py  SignInUseCase.py  SignOutUseCase.py  SignUpUseCase.py  VerifyCredentialsUseCase.py  VerifyPasswordUseCase.py  __init__.py
api/app/bible/application/command/: GetBiblePhrasesCommand.py  __init__.py
api/app/bible/application/types/: __init__.py
api/app/bible/application/usecase/: GetBiblePhraseUseCase.py  GetBiblePhrasesUseCase.py  GetBooksUseCase.py  GetChaptersUseCase.py  GetVersesUseCase.py  __init__.py
api/app/bible/domain/exception/: ChapterNotFound.py  MultipleNumbers.py  MultipleSeparators.py  PhraseNotFound.py  UnsupportedLetter.py  UnsupportedVersion.py  __init__.py
api/app/bible/domain/repository/: BibleRepository.py  __init__.py
api/app/bible/domain/service/: ParseVerseQueryService.py  ParseVerseRangeService.py  __init__.py
api/app/di/application/: usecase.py
api/app/di/domain/: port.py  repository.py  service.py
api/app/di/infrastructure/: registry.py
api/app/shared/page/: Page.py  PagingOptions.py  __init__.py
api/app/song/: README.md  __init__.py
api/core/db/: config.py  db.py
api/core/db/alembic/: env.py
api/core/notifier/: EmailNotifier.py  __init__.py
api/core/util/: BcryptPasswordHasher.py  __init__.py
api/deploy/nginx/: default.conf
(+675 files in other folders)
